do remaingin pages and api
